full functionalies and implement fixes are resolved
